[package]
name = "utf-crawler"
version = "0.0.1"
authors = ["Nathan Adams <nadams2@unca.edu>",
           "Reid Marsh <rmarsh@unca.edu>",
           "Nicholas Sanderson <nsanders@unca.edu>",
           "Pressy Muraguri <pmuragur@unca.edu>",]
edition = "2018"

[dependencies]
rand = "0.5.5"
ansi_term = "0.11.0"

#use ansi_term for use in windows
#termion is for normal linux development
#if need be, throw together a virtual machine and install ubuntu to continue development
#termion = "1.5.1"