[package]
name = "utf-crawler"
version = "0.0.1"
authors = ["Nathan Adams <nadams2@unca.edu>",
           "Reid Marsh <rmarsh@unca.edu>",
           "Nicholas Sanderson <nsanders@unca.edu>",
           "Pressy Muraguri <pmuragur@unca.edu>"]


[dependencies]
rand = "0.5.5"
termion = "1.5.1"
#ansi_term = "0.11.0"
