[package]
name = "utf-crawler"
version = "0.1.1"
authors = ["Nathan Adams <nadams2@unca.edu>", "Reid Marsh <rmarsh@unca.edu>",
           "Nicholas Sanderson <nsanders@unca.edu>", "Pressy Muraguri <pmuragur@unca.edu>"]
description = "An ASCII art themed dungeon crawler with roguelike elements written in Rust."
repository = "https://gitlab.com/utf-crawler/utf-crawler"
license = "ISC"
keywords = ["ascii", "rpg", "tui", "games", "dungeon crawler"]

[badges]
gitlab = {repository = "https://gitlab.com/utf-crawler/utf-crawler"}

[dependencies]
rand = "0.5.5"
termion = "1.5.1"
